# admete-meta

./: .gitignore  README.md  perf-tagged.Dockerfile
data/: Dockerfile  build.sbt
data/src/main/resources/: logback.xml
data/src/main/scala/: AdmeteJNA.scala  Main.scala
training/: .gitignore  data-loading.Dockerfile  data_loading_lichess.py  generate_cxx_src_arch1p8.py  hello.py  pyproject.toml  training.Dockerfile  training.py  upload-to-mlflow.py  uv.Dockerfile
tune/: .dockerignore  Dockerfile  hello.py  pyproject.toml
