[project]
name = "py-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.1",
    "flax>=0.10.6",
    "grain>=0.2.2",
    "ipykernel>=6.29.5",
    "jax~=0.6.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rbloom>=1.5.2",
    "tensorflow-datasets>=4.9.7",
]

[tool.uv.workspace]
members = ["training.py"]
