[project]
name = "tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ax-platform>=0.5.0",
    "chess>=1.11.2",
    "docker>=7.1.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]
